--- a/images/model_modified_MIL/model_modified_MIL.tex
+++ b/images/model_modified_MIL/model_modified_MIL.tex
@@ -7,7 +7,7 @@
 
 \begin{tikzpicture}
 	\draw (-1, 0.5) node[anchor=north,fill=white] {http://\textcolor{red}{some}.\textcolor{red}{domain}.\textcolor{red}{org}/\textcolor{violet}{path}/\textcolor{violet}{to}/\textcolor{violet}{file}?\textcolor{blue}{key=val}\&\textcolor{blue}{other=val2}\&\textcolor{blue}{fin=3141}};
-	\draw (-3.0, -0.3) node[anchor=north,fill=white] {\textit{\tiny Vektory příznaků instancí}};
+	\draw (-3.0, -0.3) node[anchor=north,fill=white] {\textit{\tiny Vektory příznaků tokenů}};
 	\draw (0.0, -0.3) node[anchor=north,fill=white] {\textit{\tiny Vektory příznaků částí URL}};
 	\draw (3.25, -0.3) node[anchor=north,fill=white] {\textit{\tiny Vektor příznaků celé URL}};
 	\draw (-4.7, -1.15) node[anchor=east, fill=white] {\textcolor{red}{some}};
