--- a/abstract.tex
+++ b/abstract.tex
@@ -27,7 +27,7 @@
 \bigskip
 
 \noindent \textit{Abstrakt:}
-Současné přístupy k detekci nežádoucího software sledováním síťového provozu klientů využívají ručně navržených příznaků jako části modelu. Tento přístup má několik nevýhod. Tato práce navrhuje plně automatický klasifikátor rozpoznávající aktivity malware na úrovni síťových spojení. K tomuto byl využit přístup pomocí multi-instančního učení. Součástí této práce je teoretické zavedení multi-instančního učení pomocí dvou rozdílných formalismů a souhrn dosavadních prací v oboru multi-instančního učení. Dále je popsána hierarchická struktura adresy URL jako vstupního objektu klasifikátoru. Je navržen model reflektující tuto inherentní strukturu a vysvětleno, jak využívá multi-instanční učení, v čem se liší a jak byl implementován pomocí umělých neuronových sítí. Jsou zde popsány metody sloužící k vyhodnocení kvality klasifikátoru a porovnání s předchozím dílem. Navržený klasifikátor je porovnán s nejlepším předchozím modelem a je srovnán vliv jednotlivých parametrů modelu na jeho kvalitu.
+Současné přístupy k detekci nežádoucího software sledováním síťového provozu klientů využívají ručně navržených příznaků jako části modelu. Tento přístup má několik nevýhod. Tato práce navrhuje plně automatický klasifikátor rozpoznávající aktivity malware na úrovni síťových spojení. K~tomu byl využit přístup pomocí multi-instančního učení. Součástí této práce je teoretické zavedení multi-instančního učení pomocí dvou rozdílných formalismů a shrnutí základních myšlenek dosavadních prací v oboru multi-instančního učení. Dále je popsána hierarchická struktura adresy URL jako vstupního objektu klasifikátoru. Je navržen model reflektující tuto inherentní strukturu a vysvětleno, jak využívá multi-instanční učení, v čem se liší a jak byl implementován pomocí umělých neuronových sítí. Jsou zde popsány metody sloužící k vyhodnocení kvality klasifikátoru a k porovnání s předchozím dílem. Navržený klasifikátor je porovnán s nejlepším předchozím modelem a je srovnán vliv jednotlivých parametrů modelu na jeho kvalitu.
 
 \bigskip
 
