--- a/introduction.tex
+++ b/introduction.tex
@@ -1,8 +1,8 @@
 \chapter*{Úvod}
 \addcontentsline{toc}{chapter}{Úvod}
 
-Podle nedávných statistik se v 100\% podnikových sítí vyskytuje provoz způsobený nežádoucím software (srov. \cite{_cisco_2014}). Mnoho moderního nežádoucího software využívá ke své činnosti internetové sítě, ať už jako metody šíření, pro komunikaci s řidicím (C\&C) serverem či například pro DDoS útoky. Klasický antivirový software spoléhá na systémy pravidel a databázi známého malware k detekci takovéhoto nežádoucího software. V nedávné době se avšak začaly vyskytovat pokusy o automatizaci antivirového software a využití metod umělé inteligence a strojového učení. Tato práce má za cíl najít klasifikátor síťového provozu, který je schopen o daném klientu určit, zda je nakažen nějakým nežádoucím software, pouze z vnějšího pozorování síťového provozu takovéhoto klienta bez možnosti fyzického přístupu k danému zařízení. Takovýto přístup umožňuje snadné nasazení právě například v podnikových sítích v podobě klasifikátoru zabudovaného do síťových prvků dané organizace, efektivně chránícího všechny klienty na této síti bez nutnosti instalace speciálního software na cílová zařízení. Cílem této práce je najít pomocí metod strojového učení klasifikátor síťového provozu pracující na úrovni jednotlivých síťových spojení, určující, zda tato síťová spojení pocházejí z běžné aktivity klienta, či zda jsou důsledkem aktivity malware komunikujícího po síti. \cite{machlica_learning_2017} navrhli systém pro automatickou detekci takovéhoto malware pomocí techniky náhodných lesů. I tento přístup avšak spoléhá na ručně navržené příznaky jako první fázi popisu cílové destinace probíhajícího síťové spojení. S tím se pojí několik nevýhod tohoto přístupu -- ruční návrh příznaků je velmi časově náročný, často spoléhá na techniku pokus-omyl a není zaručeno, že se zvyšující se složitostí moderního malware bude stále možné navrhnout dobře fungující příznaky. Vzhledem k tomu, že aktivita a množství výskytů jednotlivých nežádoucích programů se v současné době mění velice rychle v řádu týdnů, není zaručeno, po jak dlouhou dobu bude sada ručně navržených příznaků efektivní než bude zapotřebí najít novou. Cílem této práce je navrhnou plně automatický klasifikátor bez ručně navržených částí, řešící výše popsané problémy. Tento klasifikátor bude vyhodnocen na souboru dat z reálného síťového provozu, čítajícím více jak jednu miliardu síťových spojení, a srovnán s nejlepším předchozím modelem řešícím stejný problém, srov. \cite{machlica_learning_2017}. Je dále cílem, aby navržený automatický klasifikátor měl alespoň stejnou kvalitu jako srovnávaný model používající ručně navržené příznaky.
+Podle statistik z roku 2014 se v 100\% podnikových sítí vyskytuje mimo běžného provozu i provoz způsobený nežádoucím software (srov. \cite{_cisco_2014}). Mnoho moderního nežádoucího software využívá ke své činnosti internetové sítě, ať už jako prostředku šíření, pro komunikaci s řidicím (C\&C) serverem či například pro DDoS útoky. Klasický antivirový software spoléhá na systémy pravidel a databázi známého malware k detekci tohoto nežádoucího software. V nedávné době se začaly vyskytovat pokusy o automatizaci antivirového software a využití metod umělé inteligence a strojového učení. Tato práce má za cíl najít klasifikátor síťového provozu, který je schopen o daném klientu určit, zda je nakažen nějakým nežádoucím software, a to pouze z vnějšího pozorování síťového provozu takového klienta bez možnosti fyzického přístupu k danému zařízení. Takový přístup umožňuje snadné nasazení například v podnikových sítích v podobě klasifikátoru zabudovaného do síťových prvků dané organizace, efektivně chránícího všechny klienty na této síti bez nutnosti instalace speciálního software na cílová zařízení. Cílem této práce je najít pomocí metod strojového učení klasifikátor síťového provozu pracující na úrovni jednotlivých síťových spojení, určující, zda tato síťová spojení pocházejí z běžné aktivity klienta, či zda jsou důsledkem aktivity malware komunikujícího po síti. \cite{machlica_learning_2017} navrhli systém pro automatickou detekci tohoto malware pomocí techniky náhodných lesů. I tento přístup však spoléhá na ručně navržené příznaky jako první fázi popisu cílové destinace probíhajícího síťového spojení. S tím se pojí několik nevýhod tohoto přístupu -- ruční návrh příznaků je velmi časově náročný, často spoléhá na techniku pokus-omyl a není zaručeno, že se zvyšující se složitostí moderního malware bude stále možné navrhnout dobře fungující příznaky. Vzhledem k tomu, že aktivita a množství výskytů jednotlivých nežádoucích programů se v současné době mění velice rychle v řádu týdnů, není zaručeno, po jak dlouhou dobu bude sada ručně navržených příznaků efektivní, než bude zapotřebí najít novou. Cílem práce je navrhnout plně automatický klasifikátor bez ručně navržených částí, řešící výše popsané problémy. Tento klasifikátor bude vyhodnocen na souboru dat z reálného síťového provozu, čítajícím více jak jednu miliardu síťových spojení, a srovnán s nejlepším předchozím modelem řešícím stejný problém. Hlavním cílem práce je, aby navržený automatický klasifikátor měl alespoň stejnou kvalitu jako srovnávaný model používající ručně navržené příznaky.
 
-Pro řešení této úlohy byl vybrán přístup pomocí tzv. multi-instančního učení. Multi-instanční učení umožňuje navrženému modelu reflektovat hierarchickou strukturu adresy URL, která je používána jako vstupní identifikátor cílové destinace síťového spojení. Pro modelování celých adres URL byl přístup pomocí multi-instančního učení aplikován dvakrát na sebe sama a následně pozměněn, aby odpovídal struktuře a funkci jednotlivých částí adresy URL. Je předpokládáno, že tato korespondence mezi vstupními daty a modelem tato data popisujícím pozitivně ovlivní kvalitu představeného klasifikátoru. Navržený model je topologicky složitější než srovnatelný model nevyužívající multi-instanční přístup, avšak je méně výpočetně náročný.
+Pro řešení této úlohy byl vybrán přístup pomocí tzv. multi-instančního učení. Multi-instanční učení umožňuje navrženému modelu reflektovat hierarchickou strukturu adresy URL, která je používána jako vstupní identifikátor cílové destinace síťového spojení. Pro modelování celých adres URL byl přístup pomocí multi-instančního učení aplikován dvakrát na sebe sama a následně pozměněn, aby odpovídal struktuře a funkci jednotlivých částí adresy URL. Pracuje se s předpokladem, že tato korespondence mezi vstupními daty a modelem tato data popisujícím pozitivně ovlivní kvalitu představeného klasifikátoru. Navržený model je topologicky složitější než srovnatelný model nevyužívající multi-instanční přístup, ale je méně výpočetně náročný.
 
-Součástí této práce je teoretické zavedení multi-instančního učení pomocí množinového formalismu a pomocí stochastického formalismu. Oba tyto formalismy poskytují odlišný pohled na danou problematiku. Následuje popis paradigmat využívaných v multi-instančním učení a souhrn předchozích prací věnujících se mutli-instančnímu učení. Dále je pak teoreticky popsán navržený model a jeho odlišnosti od standardního multi-instančního učení. V kapitole \ref{evaluation} jsou popsány metody použité k zhodnocení kvality navrženého klasifikátoru a porovnání s předchozí prací na tomto problému. Je srovnán vliv několika parametrů modelu na jeho kvalitu a vybráno nejlepší nastavení. Dále jsou poskytnuty výsledky praktického ověření představeného modelu a srovnání těchto výsledků s nejlepším předchozím modelem.
+Součástí této práce je teoretické zavedení multi-instančního učení pomocí množinového formalismu a pomocí stochastického formalismu. Oba tyto formalismy poskytují odlišný pohled na danou problematiku. Následuje popis paradigmat využívaných v multi-instančním učení a shrnutí hlavních myšlenek předchozích prací věnujících se mutli-instančnímu učení. Dále je teoreticky popsán navržený model a jeho odlišnosti od standardního multi-instančního učení. V kapitole \ref{evaluation} jsou popsány metody použité k zhodnocení kvality navrženého klasifikátoru a k porovnání s předchozími pracemi na této úloze. Je srovnán vliv některých parametrů modelu na jeho kvalitu a vybráno nejlepší nastavení. V následující kapitole jsou poskytnuty výsledky praktického ověření představeného modelu a srovnání těchto výsledků s nejlepším předchozím modelem.
