--- a/zotero.bib
+++ b/zotero.bib
@@ -229,6 +229,7 @@
 }
 
 @inproceedings{wang_solving_2000,
+	location = {Stanford University, Stanford, {CA}, {USA}},
 	title = {Solving Multiple-Instance Problem: A Lazy Learning Approach},
 	url = {http://cogprints.org/2124/},
 	shorttitle = {Solving Multiple-Instance Problem},
@@ -243,7 +244,9 @@
     show that both algorithms are competitive with the best ones conceived in the 
     concept learning framework. Further work includes exploring of a combination of 
     lazy and eager multiple-instance problem classifiers.},
+	eventtitle = {Seventeenth International Conference on Machine Learning},
 	pages = {1119--1125},
+	booktitle = {Proceedings of the Seventeenth International Conference on Machine Learning},
 	publisher = {Morgan Kaufmann},
 	author = {Wang, Jun and Zucker, Jean-Daniel},
 	editor = {Langley, Pat},
@@ -578,8 +581,8 @@ An existing approach known as {MILES} is retroactively identified as an algorith
 @unpublished{vejmelka_fighting_2017,
 	title = {Fighting malicious software with machinel learning},
 	url = {https://www.youtube.com/watch?v=ZL-j8p718G8},
-	type = {Conference talk},
-	howpublished = {Conference talk},
+	type = {Přednáška na konferenci},
+	howpublished = {Přednáška na konferenci},
 	author = {Vejmelka, Martin},
 	date = {2017},
 	langid = {english},
