--- a/results.tex
+++ b/results.tex
@@ -1,5 +1,4 @@
 \chapter{Výsledky}
-\todo{ćísla v math mode}
 
 \section{Srovnání s nejlepším předchozím modelem}\label{prior_art_comparison}
 Obrázek \ref{prior_art} srovnává PR křivky nejlepšího modelu (srovnání parametrů v následujících podkapitolách) s nejlepším předchozím modelem pro soubor dat popsaný v kapitole \ref{dataset} (srov. \cite{machlica_learning_2017}). Nejlepší model má vstupní vektor příznaků o délce 2053, příznaky jsou generované z trigramů. Všechny tři funkce operující na úrovní částí adresy URL jsou shodně realizovány jednou vrstvou 20 neuronů s přenosovou funkcí ReLU, následovanou agregací tašky funkcí aritmetického průměru. Funkce operující na úrovni celé adresy URL obsahuje jednu vrstvu 60 neuronů s lineární přenosovou funkcí, následovanou výstupní vrstvou 2 neuronů s přenosovou funkcí softmax. Síť byla učena metodou ADAM minimalizující cross-entropii, ukončenou po 25 000 krocích. Váha na pozitivní třídě byla 0.5. Mini-batch obsahovaly 100 pozitivních a 100 negativních vzorků. Srovnávaný předchozí model využívá rozšířenou nepublikovanou sadu 557 příznaků z \cite{machlica_learning_2017}. Model obsahoval 3 vrstvy 128 neuronů typu ReLU, následované výstupní vrstvou 2 neuronů s přenosovou funkcí softmax. Síť byla učena metodou ADAM minimalizující cross-entropii, ukončenou po 100 000 krocích. Váha na pozitivní třídě byla 0.5. Mini-batch obsahovaly 1000 pozitivních a 1000 negativních vzorků. Všechny křivky v této kapitole byly počítány s~kvantilizací pomocí percentilů (ve smyslu kapitoly \ref{continuous_aprox}).
@@ -43,6 +42,6 @@ Pro srovnání vlivu délky vektoru příznaků byly naučeny modely s délkou 5
 \result{placeholder.pdf}{feature_count}{Srovnání PR křivek pro různé počty příznaků}
 
 \section{Srovnání vlivu váhy na pozitivních taškách}
-Při trénování umělé neuronové sítě lze pozitivním a negativním taškám přiřadit různé váhy, které odpovídají tomu, jak nežádoucí jsou falešně negativní a falešně pozitivní odhady. Výchozí váha pozitivní třídy (tj. 0.5) neodpovídá souboru dat představenému v kapitole \ref{dataset}, kde pozitivních vzorků je výrazně méně, přestože cílem je právě jejich detekce. Proto byly vyzkoušeny modely s váhou (pozitivní třídy) \( 0.5 \), 0.1 a 0.01 se všemi ostatními parametry ponechanými na hodnotách z kapitoly \ref{prior_art_comparison}. PR křivky těchto modelů jsou srovnány na obrázku \ref{weights}.
+Při trénování umělé neuronové sítě lze pozitivním a negativním taškám přiřadit různé váhy, které odpovídají tomu, jak nežádoucí jsou falešně negativní a falešně pozitivní odhady. Výchozí váha pozitivní třídy (tj. 0.5) neodpovídá souboru dat představenému v kapitole \ref{dataset}, kde pozitivních vzorků je výrazně méně, přestože cílem je právě jejich detekce. Proto byly vyzkoušeny modely s váhou (pozitivní třídy) 0.5, 0.1 a 0.01 se všemi ostatními parametry ponechanými na hodnotách z kapitoly \ref{prior_art_comparison}. PR křivky těchto modelů jsou srovnány na obrázku \ref{weights}.
 
 \result{weights_PR.pdf}{weights}{Srovnání PR křivek pro různé váhy pozitivní třídy}
