--- a/images/model_modified_MIL/model_modified_MIL.tex
+++ b/images/model_modified_MIL/model_modified_MIL.tex
@@ -1,6 +1,13 @@
 \RequirePackage{luatex85}
 \documentclass[tikz]{standalone}
 
+\usepackage{polyglossia}
+\usepackage{fontspec}
+\usepackage{csquotes}
+
+\setdefaultlanguage{czech}
+\setmainfont{TeX Gyre Termes}
+
 \usetikzlibrary{decorations.pathreplacing}
 
 \begin{document}
