--- a/images/url_subparts/url_subparts.tex
+++ b/images/url_subparts/url_subparts.tex
@@ -1,6 +1,13 @@
 \RequirePackage{luatex85}
 \documentclass[tikz]{standalone}
 
+\usepackage{polyglossia}
+\usepackage{fontspec}
+\usepackage{csquotes}
+
+\setdefaultlanguage{czech}
+\setmainfont{TeX Gyre Termes}
+
 \usetikzlibrary{decorations.pathreplacing}
 
 \definecolor{lightred}{rgb}{1,0.5,0.5}
