--- a/model.tex
+++ b/model.tex
@@ -117,7 +117,7 @@ Funkce \( J \) je nazývána \BPname{objektivní funkcí minimalizující cross-
 Výhodou objektivní funkce minimalizující cross-entropii je její jednoduchá derivace tvaru
 \[ \frac{\partial J}{\partial x_i} = h_i - y_i \]
 
-Celá tato podkapitola byla zpracována podle \cite{roelants_how_2017}
+Celá tato podkapitola byla zpracována podle \cite{roelants_how_2017}.
 
 \section{Metody trénování neuronových sítí}
 Jednou ze základních metod trénování neuronových sítí je metoda \BPname{gradientního sestupu} (srov. \cite{cauchy_methode_1847}). Předpokládá se existence nějaké objektivní funkce \( J \left( \theta \right) \), jejíž minimum je hledáno. \( \theta \in \BPfield R^d \) jsou učené parametry modelu. Tyto parametry se opakovaně mění, dokud není nalezeno požadované minimum funkce \( J \). V metodě gradientního sestupu jsou nové parametry \( \hat \theta \) počítány pomocí vztahu
