--- a/preamble.tex
+++ b/preamble.tex
@@ -72,7 +72,7 @@
 \newcommand{\result}[3]{%
 	\begin{figure}[h]%
 		\centering%
-		\includegraphics[width=0.96\textwidth]{images/results/#1}%
+		\includegraphics[width=\textwidth]{images/results/#1}%
 		\caption{#3}\label{#2}%
 	\end{figure}%
 }
