--- a/preamble.tex
+++ b/preamble.tex
@@ -21,6 +21,7 @@
 \usepackage{algpseudocode}
 \usepackage{booktabs}
 \usepackage{multirow}
+\usepackage{float}
 
 \geometry{tmargin=4cm,bmargin=3cm,lmargin=3cm,rmargin=2cm,headheight=0.8cm,headsep=1cm,footskip=0.5cm,marginparwidth=1.6cm}
 \setdefaultlanguage{czech}
