--- a/results.tex
+++ b/results.tex
@@ -1,4 +1,7 @@
 \chapter{Výsledky}
+Navržený model je velmi obecný a vyžaduje nastavení mnoha volných parametrů. Jedná se zejména o parametry použité umělé neuronové sítě, jako je počet vrstev, počet neuronů v každé vrstvě, volba přenosových funkcí aj. Dále o volbu a parametry trénovacího algoritmu, k nimž patří volba objektivní funkce a váha pozitivní třídy. Lze nastavit také parametry zobrazení \( \psi \), projektujícího tokeny do vektorů příznaků, jimiž jsou délka vektoru příznaků a délka podslov využívaných k jejich generování.
+
+V následujících podkapitolách je nejprve porovnáno nejlepší navržené řešení s \cite{machlica_learning_2017} a následně srovnán vliv některých parametrů modelu na jeho kvalitu.
 
 \section{Srovnání s nejlepším předchozím modelem}\label{prior_art_comparison}
 Obrázek \ref{prior_art} srovnává PR křivky nejlepšího modelu (srovnání parametrů v následujících podkapitolách) s nejlepším předchozím modelem pro soubor dat popsaný v kapitole \ref{dataset} (srov. \cite{machlica_learning_2017}). Nejlepší model má vstupní vektor příznaků o délce 2053, příznaky jsou generované z trigramů. Všechny tři funkce operující na úrovní částí adresy URL jsou shodně realizovány jednou vrstvou 20 neuronů s přenosovou funkcí ReLU, následovanou agregací tašky funkcí aritmetického průměru. Funkce operující na úrovni celé adresy URL obsahuje jednu vrstvu 60 neuronů s lineární přenosovou funkcí, následovanou výstupní vrstvou 2 neuronů s přenosovou funkcí softmax. Síť byla učena metodou ADAM minimalizující cross-entropii, ukončenou po 25 000 krocích. Váha na pozitivní třídě byla 0.5. Mini-batch obsahovaly 100 pozitivních a 100 negativních vzorků. Srovnávaný předchozí model využívá rozšířenou nepublikovanou sadu 557 příznaků z \cite{machlica_learning_2017}. Model obsahoval 3 vrstvy 128 neuronů typu ReLU, následované výstupní vrstvou 2 neuronů s přenosovou funkcí softmax. Síť byla učena metodou ADAM minimalizující cross-entropii, ukončenou po 100 000 krocích. Váha na pozitivní třídě byla 0.5. Mini-batch obsahovaly 1000 pozitivních a 1000 negativních vzorků. Všechny křivky v této kapitole byly počítány s~kvantilizací pomocí percentilů (ve smyslu kapitoly \ref{continuous_aprox}).
@@ -7,14 +10,13 @@ Obrázek \ref{prior_art} srovnává PR křivky nejlepšího modelu (srovnání p
 
 \section{Srovnání vlivu topologie sítě}
 
-Bylo vyzkoušeno 5 různých topologií neuronových sítí, odpovídajících modelu popsanému v kapitole \ref{model}. Všechny tyto topologie používají tři identické neuronové sítě realizující funkce na úrovni částí adresy URL. Topologie označované jako \BPname{relumean}, \BPname{relurelumean}, \BPname{maxout3mean} a \BPname{maxout3maxout3mean} shodně realizují klasifikační funkci na úrovni celé adresy URL jednou vrstvou neuronů s lineární přenosovou funkcí a jednou vrstvou s přenosovou funkcí softmax. Topologie relumean používá pro funkce na úrovni částí adresy URL jednu vrstvu typu ReLU, následovanou agregační funkcí aritmetického průměru. Topologie relurelumean používá dvě vrstvy typu ReLU následované agregační funkcí aritmetického průměru. Topologie maxout3mean používá jednu vrstvu typu maxout3 (tj. maxout s parametrem \( k = 3 \)) následovanou agregační funkcí aritmetického průměru. Topologie maxout3maxout3mean využívá 2 vrstvy typu maxout3 následované agregační funkcí aritmetického průměru. Topologie \BPname{relurelumeanrelu} má funkce na úrovni částí adresy URL shodné s topologií relurelumean, avšak funkci na úrovni celé adresy URL realizuje jako jednu vrstvu typu ReLU následovanou jednou vrstvou s lineární přenosovou funkcí následovanou jednou vrstvou typu softmax. Ostatní parametry jsou shodné s parametry popsanými v kapitole \ref{prior_art_comparison}. PR křivky všech těchto topologií jsou zobrazeny na obrázku \ref{topologies}. \todo{Grafy v TikZ, aby byly stejné fonty, možná 2 vedle sebe. legenda na dobrém místě, české legendy}
+Bylo vyzkoušeno 5 různých topologií neuronových sítí, odpovídajících modelu popsanému v kapitole \ref{model}. Všechny tyto topologie používají tři identické neuronové sítě realizující funkce na úrovni částí adresy URL. Topologie označované jako \BPname{relumean}, \BPname{relurelumean}, \BPname{maxout3mean} a \BPname{maxout3maxout3mean} shodně realizují klasifikační funkci na úrovni celé adresy URL jednou vrstvou neuronů s lineární přenosovou funkcí a jednou vrstvou s přenosovou funkcí softmax. Topologie relumean používá pro funkce na úrovni částí adresy URL jednu vrstvu typu ReLU, následovanou agregační funkcí aritmetického průměru. Topologie relurelumean používá dvě vrstvy typu ReLU následované agregační funkcí aritmetického průměru. Topologie maxout3mean používá jednu vrstvu typu maxout3 (tj. maxout s parametrem \( k = 3 \)) následovanou agregační funkcí aritmetického průměru. Topologie maxout3maxout3mean využívá 2 vrstvy typu maxout3 následované agregační funkcí aritmetického průměru. Topologie \BPname{relurelumeanrelu} má funkce na úrovni částí adresy URL shodné s topologií relurelumean, avšak funkci na úrovni celé adresy URL realizuje jako jednu vrstvu typu ReLU následovanou jednou vrstvou s lineární přenosovou funkcí následovanou jednou vrstvou typu softmax. Ostatní parametry jsou shodné s parametry popsanými v kapitole \ref{prior_art_comparison}. PR křivky všech těchto topologií jsou zobrazeny na obrázku \ref{topologies}.
 
 \result{topology/topology.pdf}{topologies}{Srovnání PR křivek různých topologií}
 
 \section{Srovnání vlivu parametrů generátoru příznaků}
 
-\todo{algoritmus někde poblíž}
-\begin{algorithm}
+\begin{algorithm}[H]
 	\caption{Generátor vektorů příznaků}
 	\label{feature_generator}
 	\begin{algorithmic}
