--- a/BP.tex
+++ b/BP.tex
@@ -5,19 +5,19 @@
 
 \pagestyle{empty}
 
-%\input{titlepage.tex}
+\input{titlepage.tex}
 
 \clearpage
 
-%\null\vfill
-%\begin{center}
-	%- Zadání práce -
-%\end{center}
-%\vfill
+\null\vfill
+\begin{center}
+	- Zadání práce -
+\end{center}
+\vfill
 
 \clearpage
 
-%\input{acknowledgment.tex}
+\input{acknowledgment.tex}
 
 \clearpage
 
