Added bibliography to TOC

--- a/BP.tex
+++ b/BP.tex
@@ -58,6 +58,7 @@
 	\addcontentsline{toc}{chapter}{Seznam algoritmů}
 \endgroup
 
-\printbibliography[title=Literatura]
+\printbibliography[title=Seznam literatury]
+\addcontentsline{toc}{chapter}{Seznam literatury}
 
 \end{document}
