--- a/preamble.tex
+++ b/preamble.tex
@@ -27,7 +27,7 @@
 \usepackage{url}
 \usepackage[backend=biber,style=iso-authoryear,sortlocale=cs_CZ,autolang=other,bibencoding=UTF8]{biblatex}
 \usepackage{setspace}
-\usepackage[\ifbool{printed}{hidelinks=true}{colorlinks=true}]{hyperref}
+\usepackage[\ifbool{printed}{hidelinks}{colorlinks}]{hyperref}
 \usepackage{braket}
 \usepackage{enumerate}
 \usepackage[chapter]{algorithm}
