--- a/zotero.bib
+++ b/zotero.bib
@@ -9,8 +9,7 @@
 	date = {2016-09-23},
 	eprinttype = {arxiv},
 	eprint = {1609.07257},
-	keywords = {Computer Science - Learning, Statistics - Machine Learning},
-	file = {arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/TMZARQ23/1609.html:text/html}
+	keywords = {Computer Science - Learning, Statistics - Machine Learning}
 }
 
 @inproceedings{pevny_discriminative_2016,
@@ -40,8 +39,7 @@
 	date = {2016-03-01},
 	eprinttype = {arxiv},
 	eprint = {1603.00391},
-	keywords = {Computer Science - Learning, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning},
-	file = {arXiv\:1603.00391 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/6XC4J6PI/Gulcehre et al. - 2016 - Noisy Activation Functions.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ABWZSR2D/1603.html:text/html}
+	keywords = {Computer Science - Learning, Computer Science - Neural and Evolutionary Computing, Statistics - Machine Learning}
 }
 
 @article{czarnecki_understanding_2017,
@@ -54,8 +52,7 @@
 	date = {2017-03-01},
 	eprinttype = {arxiv},
 	eprint = {1703.00522},
-	keywords = {Computer Science - Learning, Computer Science - Neural and Evolutionary Computing},
-	file = {arXiv\:1703.00522 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/KAFXM9H3/Czarnecki et al. - 2017 - Understanding Synthetic Gradients and Decoupled Ne.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/4KE332W9/1703.html:text/html}
+	keywords = {Computer Science - Learning, Computer Science - Neural and Evolutionary Computing}
 }
 
 @article{vinyals_order_2015,
@@ -69,8 +66,7 @@
 	date = {2015-11-19},
 	eprinttype = {arxiv},
 	eprint = {1511.06391},
-	keywords = {Computer Science - Computation and Language, Computer Science - Learning, Statistics - Machine Learning},
-	file = {arXiv\:1511.06391 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ASJ97XD2/Vinyals et al. - 2015 - Order Matters Sequence to sequence for sets.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/WSUZ6KAK/1511.html:text/html}
+	keywords = {Computer Science - Computation and Language, Computer Science - Learning, Statistics - Machine Learning}
 }
 
 @article{kingma_adam:_2014,
@@ -84,8 +80,7 @@
 	date = {2014-12-22},
 	eprinttype = {arxiv},
 	eprint = {1412.6980},
-	keywords = {Computer Science - Learning},
-	file = {arXiv\:1412.6980 PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/F3NRV8A4/Kingma and Ba - 2014 - Adam A Method for Stochastic Optimization.pdf:application/pdf;arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/UHTTRZWN/1412.html:text/html}
+	keywords = {Computer Science - Learning}
 }
 
 @article{dietterich_solving_1997,
@@ -102,8 +97,7 @@
 	author = {Dietterich, Thomas G. and Lathrop, Richard H. and Lozano-Pérez, Tomás},
 	urldate = {2017-05-31},
 	date = {1997-01-01},
-	keywords = {Drug design, Machine learning, Structure-activity relationships},
-	file = {ScienceDirect Full Text PDF:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/8TARSUSR/Dietterich et al. - 1997 - Solving the multiple instance problem with axis-pa.pdf:application/pdf;ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/PSIMP84K/S0004370296000343.html:text/html}
+	keywords = {Drug design, Machine learning, Structure-activity relationships}
 }
 
 @article{amores_multiple_2013,
@@ -120,8 +114,7 @@
 	author = {Amores, Jaume},
 	urldate = {2017-05-31},
 	date = {2013-08},
-	keywords = {Bag-of-Words, Codebook, Multi-instance learning},
-	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ATXBMISH/S0004370213000581.html:text/html}
+	keywords = {Bag-of-Words, Codebook, Multi-instance learning}
 }
 
 @report{berners-lee_uniform_1994,
@@ -132,8 +125,7 @@
 	institution = {{CERN}},
 	author = {Berners-Lee, Tim and Masinter, Larry and {McCahill}, Mark P.},
 	urldate = {2017-06-05},
-	date = {1994-12},
-	file = {:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/GMQHMWSH/rfc1738.txt:text/plain}
+	date = {1994-12}
 }
 
 @report{mockapetris_domain_1987,
@@ -144,8 +136,7 @@
 	institution = {Network Working Group},
 	author = {Mockapetris, Paul V.},
 	urldate = {2017-06-24},
-	date = {1987-11},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/GI3UEEKC/rfc1034.html:text/html}
+	date = {1987-11}
 }
 
 @book{knuth_art_1968,
@@ -175,8 +166,7 @@
 	booktitle = {Advances in neural information processing systems},
 	author = {Muandet, Krikamol and Fukumizu, Kenji and Dinuzzo, Francesco and Schölkopf, Bernhard},
 	urldate = {2017-06-29},
-	date = {2012},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/AWI9AER6/4825-learning-from-distributions-via-support-measure-machines.html:text/html}
+	date = {2012}
 }
 
 @article{machlica_learning_2017,
@@ -189,8 +179,7 @@
 	date = {2017-02-08},
 	eprinttype = {arxiv},
 	eprint = {1702.02530},
-	keywords = {Computer Science - Learning, Statistics - Machine Learning},
-	file = {arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/XWH2W575/1702.html:text/html}
+	keywords = {Computer Science - Learning, Statistics - Machine Learning}
 }
 
 @inproceedings{zhang_em-dd:_2002,
@@ -251,8 +240,7 @@
 	author = {Wang, Jun and Zucker, Jean-Daniel},
 	editor = {Langley, Pat},
 	urldate = {2017-07-01},
-	date = {2000},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/7C2WC3ZI/2124.html:text/html}
+	date = {2000}
 }
 
 @book{dasarathy_nearest_1991,
@@ -280,8 +268,7 @@
 	journaltitle = {{IEEE} Transactions on Pattern Analysis and Machine Intelligence},
 	author = {Chen, Yixin and Bi, Jinbo and Wang, J. Z.},
 	date = {2006-12},
-	keywords = {1-norm support vector machine, Algorithms, Application software, Artificial Intelligence, classification accuracy, computer vision, drug activity prediction, drug activity prediction., Drugs, embedded instance selection, feature extraction, feature mapping, feature subset selection, image categorization, Image Enhancement, Image Interpretation, Computer-Assisted, Imaging, Three-Dimensional, Information Storage and Retrieval, Labeling, labeling uncertainty, learning (artificial intelligence), Learning systems, {MILES}, Multiple-instance learning, multiple-instance learning algorithms, object recognition, pattern classification, Reproducibility of Results, Robustness, Sensitivity and Specificity, supervised learning, support vector machine, Support vector machine classification, support vector machines, Uncertainty},
-	file = {IEEE Xplore Abstract Record:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/MWZ5J8PU/1717454.html:text/html}
+	keywords = {1-norm support vector machine, Algorithms, Application software, Artificial Intelligence, classification accuracy, computer vision, drug activity prediction, drug activity prediction., Drugs, embedded instance selection, feature extraction, feature mapping, feature subset selection, image categorization, Image Enhancement, Image Interpretation, Computer-Assisted, Imaging, Three-Dimensional, Information Storage and Retrieval, Labeling, labeling uncertainty, learning (artificial intelligence), Learning systems, {MILES}, Multiple-instance learning, multiple-instance learning algorithms, object recognition, pattern classification, Reproducibility of Results, Robustness, Sensitivity and Specificity, supervised learning, support vector machine, Support vector machine classification, support vector machines, Uncertainty}
 }
 
 @inproceedings{zhu_1-norm_2004,
@@ -310,8 +297,7 @@
 	institution = {National Institute of Standards and Technology},
 	author = {Martin, A. and Doddington, G. and Kamm, T. and Ordowski, M. and Przybocki, M.},
 	urldate = {2017-07-02},
-	date = {1997},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ARSHTHJ4/ADA530509.html:text/html}
+	date = {1997}
 }
 
 @software{lin_mlbase.jl:_2017,
@@ -323,8 +309,7 @@
 	author = {Lin, Dahua},
 	urldate = {2017-07-03},
 	date = {2017-06-22},
-	note = {original-date: 2013-02-10T15:50:23Z},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/D83EMEWP/MLBase.html:text/html}
+	note = {original-date: 2013-02-10T15:50:23Z}
 }
 
 @software{zea_roc.jl:_2015,
@@ -335,8 +320,7 @@
 	author = {Zea, Diego Javier},
 	urldate = {2017-07-03},
 	date = {2015-11-04},
-	note = {original-date: 2014-04-26T08:56:44Z},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/XUWJDCDM/ROC.html:text/html}
+	note = {original-date: 2014-04-26T08:56:44Z}
 }
 
 @software{leeuwen_rocanalysis.jl:_2016,
@@ -347,8 +331,7 @@
 	author = {Leeuwen, David van},
 	urldate = {2017-07-03},
 	date = {2016-12-08},
-	note = {original-date: 2014-03-13T08:23:30Z},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/FH7UC6CW/ROCAnalysis.html:text/html}
+	note = {original-date: 2014-03-13T08:23:30Z}
 }
 
 @book{goodfellow_deep_2016,
@@ -427,8 +410,7 @@
 	author = {Cheplygina, Veronika and Tax, David M. J. and Loog, Marco},
 	urldate = {2017-07-04},
 	date = {2015-01-01},
-	keywords = {Dissimilarity representation, drug activity prediction, Image classification, Multiple instance learning, Point set distance, Text categorization},
-	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/C5PFMKXR/S0031320314002817.html:text/html}
+	keywords = {Dissimilarity representation, drug activity prediction, Image classification, Multiple instance learning, Point set distance, Text categorization}
 }
 
 @article{cauchy_methode_1847,
@@ -453,8 +435,7 @@
 	journaltitle = {Journal of Machine Learning Research},
 	author = {Duchi, John and Hazan, Elad and Singer, Yoram},
 	urldate = {2017-07-04},
-	date = {2011},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/DEGN23VC/duchi11a.html:text/html}
+	date = {2011}
 }
 
 @article{zeiler_adadelta:_2012,
@@ -468,8 +449,7 @@
 	date = {2012-12-22},
 	eprinttype = {arxiv},
 	eprint = {1212.5701},
-	keywords = {Computer Science - Learning},
-	file = {arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/QH46GTXC/1212.html:text/html}
+	keywords = {Computer Science - Learning}
 }
 
 @article{tieleman_lecture_2012,
@@ -499,8 +479,7 @@
 	author = {Jaderberg, Max and Czarnecki, Wojciech Marian and Osindero, Simon and Vinyals, Oriol and Graves, Alex and Kavukcuoglu, Koray},
 	urldate = {2017-07-06},
 	date = {2016},
-	langid = {english},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/B93NQB59/1608.html:text/html}
+	langid = {english}
 }
 
 @article{klambauer_self-normalizing_2017,
@@ -509,8 +488,7 @@
 	journaltitle = {{arXiv} preprint {arXiv}:1706.02515},
 	author = {Klambauer, Günter and Unterthiner, Thomas and Mayr, Andreas and Hochreiter, Sepp},
 	urldate = {2017-07-06},
-	date = {2017},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/6HS5G8ZP/1706.html:text/html}
+	date = {2017}
 }
 
 @article{chen_image_2004,
@@ -523,8 +501,7 @@
 	journaltitle = {Journal of Machine Learning Research},
 	author = {Chen, Yixin and Wang, James Z.},
 	urldate = {2017-07-06},
-	date = {2004},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/M5FF5FNU/chen04a.html:text/html}
+	date = {2004}
 }
 
 @article{zhang_multi-instance_2009,
@@ -541,8 +518,7 @@
 	author = {Zhang, Min-Ling and Zhou, Zhi-Hua},
 	urldate = {2017-07-06},
 	date = {2009-08-01},
-	langid = {english},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/BSNAI4G5/10.html:text/html}
+	langid = {english}
 }
 
 @thesis{foulds_learning_2008,
@@ -558,8 +534,7 @@ An existing approach known as {MILES} is retroactively identified as an algorith
 	author = {Foulds, James Richard},
 	urldate = {2017-07-06},
 	date = {2008},
-	langid = {english},
-	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/HJKFVNMB/2460.html:text/html}
+	langid = {english}
 }
 
 @inproceedings{zhou_multi-instance_2009,
@@ -603,8 +578,7 @@ An existing approach known as {MILES} is retroactively identified as an algorith
 	author = {Mac Namee, B. and Cunningham, P. and Byrne, S. and Corrigan, O. I.},
 	urldate = {2017-07-07},
 	date = {2002-01-01},
-	keywords = {Anticoagulant drug therapy, Artificial neural networks, Medical decision support, Regression},
-	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/U6QNTDXH/S0933365701000926.html:text/html}
+	keywords = {Anticoagulant drug therapy, Artificial neural networks, Medical decision support, Regression}
 }
 
 @online{roelants_how_2017,
@@ -614,6 +588,5 @@ An existing approach known as {MILES} is retroactively identified as an algorith
 	author = {Roelants, Peter},
 	urldate = {2017-07-08},
 	date = {2017},
-	langid = {english},
-	file = {Peter's Notes:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/66VUWUIX/neural_network_implementation_intermezzo02.html:text/html}
+	langid = {english}
 }
